--- a/styles.css
+++ b/styles.css
@@ -347,6 +347,123 @@ body{
     font-weight:600 ;
     padding-bottom: 9px;
 }
+.learning-block2-elm2{
+    padding-inline: 16px;
+    max-width: 100%;
+    margin: auto;
+}
+.learning-block2-elm2-main{
+    width: 100%;
+}
+.learning-element{
+    padding: 24px 0px 0px;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+}
+
+.learning-element p{
+    margin: 0;
+}
+
+.learning-element-para{
+    font-size: 1rem;
+    line-height: 150%;
+}
+.learnig-space{
+    height: 40px;
+}
+
+
+.learnig-para{
+    font-family:sans ;
+    font-weight: 600;
+    font-size: 1.5rem;
+    line-height: 2rem;
+}
+.learnig-space2{
+    height: 18px;
+}
+.learning-element ul{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px 32px;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+}
+.learning-element ul li{
+    width: 100%;
+    border: solid 1px;
+    border-color: #C7C7C7;
+    border-radius: 4px;
+    background-color: #F6F6F6;
+    display: flex;
+    gap: 24px;
+    padding: 24px;
+    width: 100%;
+    flex-direction: column-reverse;
+
+}
+.learning-cotent-elm1{
+    font-size: 0.75rem;
+    line-height: 150%;
+}
+.learning-cotent-elm2{
+    margin-top: 24px;
+}
+.learning-cotent-elm1 article{
+    border: 1px solid;
+    border-color: #DFDFDF;
+    border-radius: 6px;
+    height: 292px;
+    padding: 0.25rem;
+    position: relative;
+    transition: all 0.3s ease-in-out;
+
+}
+
+.learning-cotent-elm2-sub{
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+
+}
+.learning-cotent-elm2-sub-img{
+    display: flex;
+    border-radius: 4px;
+    padding: 8px;
+    position: relative;
+    flex: 0 0 100px;
+    height: 100px;
+    overflow: hidden;
+}
+.learning-cotent-elm2-sub-img img{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    inset: 0px;
+    object-fit: cover;
+    border-radius: 4px;
+    pointer-events: none;
+}
+.learning-cotent-elm2-sub-content{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    margin-bottom: -4px;
+    margin-left: -4px;
+    margin-right: -4px;
+    padding: 0.75rem;
+}
+.learning-cotent-elm2-sub-content a{
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 1.375rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-decoration: none;
+    color: #0B0B0B;
+}
 
 
 
