--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* @font-face {
+@font-face {
     font-family: "PolySans Neutral";
     src: url("https://db.onlinewebfonts.com/t/03bd7255184e8e8ad4d2a521fa920b6c.eot");
     src: url("https://db.onlinewebfonts.com/t/03bd7255184e8e8ad4d2a521fa920b6c.eot?#iefix")format("embedded-opentype"),
@@ -6,8 +6,8 @@
     url("https://db.onlinewebfonts.com/t/03bd7255184e8e8ad4d2a521fa920b6c.woff")format("woff"),
     url("https://db.onlinewebfonts.com/t/03bd7255184e8e8ad4d2a521fa920b6c.ttf")format("truetype"),
     url("https://db.onlinewebfonts.com/t/03bd7255184e8e8ad4d2a521fa920b6c.svg#PolySans Neutral")format("svg");
-} */
-@import url(https://db.onlinewebfonts.com/c/03bd7255184e8e8ad4d2a521fa920b6c?family=PolySans+Neutral);
+}
+/* @import url(https://db.onlinewebfonts.com/c/03bd7255184e8e8ad4d2a521fa920b6c?family=PolySans+Neutral); */
 @font-face {
     font-family: sans;
     src: url(fonts/5d258b355fefebcb-s.p.woff2);
@@ -48,6 +48,10 @@
 
 body{
     font-family:sans;
+    margin: 0;
+    
+}
+p{
     margin: 0;
 }
 :where(*, *::before, *::after) {
@@ -468,7 +472,7 @@ body{
     display: flex;
     flex-direction: column;
     gap: 12px;
-    margin-top: auto;
+    margin-top: 37px;
 }
 .learning-cotent-elm2-sub-content-elm1{
     display: flex;
@@ -525,18 +529,483 @@ body{
     font-weight: 600;
 }
 .learning-para{
-  font-size: 1rem;
-  line-height: 150%; /* or 1.5 */
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: block; /* or block-level element */
-  max-height: calc(1.5em * 7); /* 7 lines of text */ /* 7 lines */
-
+    font-size: 1rem;
+    line-height: 150%; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block; 
+    max-height: calc(1.5em * 7); 
 }
 
 
+.popular-block{
+    width: 100%;
+    padding-inline: 16px;
+    margin: auto;
+    max-width: 100%;
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+
+.popular-block h2{
+    /* font-family: ; */
+    font-size: 1.125rem;
+    line-height: 1.68rem;
+    font-weight: 500;
+    font-size: 18px;
+    margin: 0;
+}
+
+.popular-block-ul{
+    list-style-type: none;
+    display: grid;
+    grid-auto-flow: column;
+    grid-gap: 16px;
+    grid-auto-columns: 190px;
+    padding-inline: 16px;
+    padding-left: 0;
+}
+.development-block{
+    width: 100%;
+    margin: auto;
+    max-width: 100%;
+    margin-top: 64px;
+    margin-bottom: 64px;
+    /* padding-inline: 16px; */
+}
+article{
+    padding: 4px;
+    border-radius: 4px;
+    border: 1px solid #DFDFDF;
+}
+
+.development-block h2{
+    font-family:"PolySans Neutral" ;
+    font-size: 32px;
+    font-weight: 400;
+    text-align: center;
+    margin: 0;
+}
+.development-block-elm{
+    overflow-x: auto;
+}
+.development-block-elm ul{
+    list-style-type: none;
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-auto-flow: column;
+    grid-gap: 16px;
+    margin: 0px;
+    padding: 0px 0px 24px;
+    width: 70rem;
+    padding-inline-end: 16px;
+    padding-inline-start: 16px;
+}
+
+.development-block-elm ul li{
+    display: flex;
+}
+
+.development-content{
+    background: #fff;
+    border: solid 1px;
+    border-color: #C7C7C7;
+    border-radius: 4px;
+    padding: 40px 16px;
+
+}
+.development-content p{
+    font-family: sans;
+    font-weight: 600;
+    font-size: 1.5rem;
+    line-height: 2rem;
+}
+
+.developers-content-list{
+    display: flex;
+    flex-direction: column;
+    flex-direction: column;
+    gap: 24px;
+}
+/* 
+.developers-content-list-elm div{
+    width: 166px;
+} */
+
+.developers-content-list-elm svg{
+    width: 24px;
+    height: 24px;
+    display: inline;
+    line-height: 1em;
+    margin-right: 8px;
+}
+
+.company-block{
+    padding-inline: 16px;
+    margin: auto;
+    max-width: 100%;
+
+}
+
+.company-block h2{
+    font-family: "PolySans Neutral" ;
+    font-weight: 400;
+    font-size: 2rem;
+    line-height: 2.5rem;
+    text-align: center;
+    margin: -4px 0 4px 0;
+}
+.company-logs{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 33px 24px;
+}
+
+.explore-block{
+    padding-inline: 16px;
+    margin: auto;
+    max-width: 100%;
+}
+
+.explore-block-content{
+    border: solid 1px;
+    border-color: #C7C7C7;
+    border-radius: 4px;
+    background-color: #fff;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    padding: 40px 16px;
+}
+
+.explore-block-content h2{
+    font-family: "PolySans Neutral" ;
+    font-weight: 400;
+    font-size: 2rem;
+    line-height: 2.5rem;
+    margin: -4px 0 4px 0;
+}
+.explore-content-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    justify-content: center;
+}
+.explore-content-list a{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-color: currentColor;
+    color: #2015FF;
+    fill: #2015FF;
+    box-shadow: inset 0 0 0 2px #2015FF;
+    white-space: nowrap;
+    padding: 12px 16px 12px 30px;
+    width: 100%;
+    border-radius: 4px;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1rem;
+}
 
 
+.explore-content-list a span{
+    display: inline-flex;
+    align-self: center;
+    margin-inline-start: 0.5rem;
+}
+.explore-content-list a span svg{
+    width: 24px;
+    height: 24px;
+}
+.start-block{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #171A53;
+    color: #fff;
+    overflow: hidden;
+    padding-top: 64px;
+    position: relative;
+    text-align: center;
+}
+.start-block-content{
+    animation: animation 20000ms infinite linear;
+    height: 353px;
+    left: 50%;
+    position: absolute;
+    width: 548px;
+}
+
+@keyframes animation {
+    0%{
+        transform: translate(-50%,0%);
+        top: 100%;
+    }
+    100%{
+        transform: translate(-50%,-100%);
+        top: 0%;
+    }
+}
+
+
+.start-block-content img{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    /* color: transparent; */
+}
+
+.start-block-elm {
+    margin: auto;
+    max-width: 100%;
+    position: relative;
+    z-index: 2;
+    padding-inline: 16px;
+}
+.start-block-elm1{
+    display: flex;
+    flex-direction: column;
+    /* gap: 8px; */
+    justify-content: center;
+}
+
+.start-block-elm1 p{
+    max-width: 900px;
+    margin: auto;
+    font-size: 1rem;
+    line-height: 150%;
+}
+.start-block-elm1 h2{
+    font-family: "PolySans Neutral" ;
+    font-weight: 400;
+    font-size: 40px;
+    line-height:48px;
+    margin: 4px 0 4px 0;
+    /* margin: 0; */
+}
+
+.start-block-btn{
+    width: 100%;
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+}
+.start-block-btn a{
+    display: inline-flex;
+    color: #0B0B0B;
+    background-color: #00C5A1;
+    padding: 12px 24px 12px 32px;
+    font-weight: 600;
+    border-radius: 4px;
+    font-size: 1rem;
+    height: 3rem;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+.start-block-btn a span{
+    margin-left: 8px;
+}
+.start-block-btn a span svg{
+    height: 24px;
+    width: 24px;
+}
+.start-block-eye{
+    padding: 16px;
+    padding-right: 0;
+    padding-top:calc(64px - 16px - 24px) ;
+    display: flex;
+    justify-content: flex-end;
+}
+.start-block-eye button{
+    display: inline-flex;
+    justify-content: center;
+    position: relative;
+    outline: 2px solid transparent;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    fill: #0B0B0B;
+    padding: 0px;
+    height: 24px;
+    width: 24px;
+}
+
+
+.footer-block{
+    border-top: solid 1px #C7C7C7;
+    padding-inline: 16px;
+
+}
+
+footer{
+ padding: 64px 0;
+}
+
+.footer-logo{
+    font-size: 1rem;
+    line-height:150%;
+    font-weight: 700;
+    position: relative;
+    display: flex;
+    /* width: fit-content */
+    width: 100%;
+
+}
+.footer-logo img{
+    width: 170px;
+}
+
+.footer-dropDown{
+    display: block;
+}
+
+.footer-dropDown-elm{
+    min-height: 1rem;
+}
+
+.footer-dropDown-elm button{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    line-height: 150%;
+    font-weight: 600;
+    border: 1px solid #C7C7C7;
+    border-bottom: 0;
+    padding: 1rem 1rem 1rem 1.5rem;
+}
+
+.footer-dropDown-elm button span{
+    flex: 1;
+    text-align: left;
+    font-size: 16px;
+    font-weight: 600;
+
+}
+.footer-dropDown-elm button svg{
+    width: 2rem;
+    height: 2rem;
+    display: inline-block;
+    line-height: 1rem;
+    font-size: 2rem;
+}
+.footer-btns{
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 40px;
+}
+.footer-btns-form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    margin: 0;
+}
+.footer-btns-form-elm {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.footer-btns-form-elm1{
+    display: flex;
+    justify-content: space-between;
+}
+.footer-label{
+    display: flex;
+    /* align-items: center; */
+    font-weight: 600;
+    line-height: 150%;
+}
+.footer-btns-form-elm1 button{
+    background-color: transparent;
+    height: 24px;
+    padding-right: 0;
+    padding-top: 0;
+}
+.footer-btns-form-elm1 button svg{ 
+    height: 24px;
+    width: 24px;
+}
+.footer-btns-form-elm input{
+    border: 1px solid #808080;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    height: 48px;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+    padding: 14px 16px 10px 16px;
+}
+
+.footer-btns-form-elm input::placeholder{
+    font-size: 16px;
+    font-family: sans;
+}
+.subscribe-btn{
+    font-family: sans;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    font-weight: 600;
+    padding: 12px 24px;
+    font-size: 16px;
+    background: transparent;
+    color: #2015FF;
+    border: 2px solid #2015FF;
+    height: 48px;
+}
+
+.social-medias{
+    display: flex;
+    gap: 8px;
+    padding: 0;
+    margin: 0;
+}
+
+
+.social-medias li{
+    list-style: none;
+    height: 32px;
+    width: 32px;
+}
+.social-medias li img{
+    height: 32px;
+    width: 32px;
+}
+.footer-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.footer-space{
+    height: 24px;
+    border-bottom: 1px solid gray;
+    margin-bottom: 24px;
+}
+
+.footer-description{
+    max-width: 100%;
+    font-family: sans;
+    /* font-size: 12px; */
+    line-height: 150%;
+}
+
+.footer-description small{
+    line-height: 24px;
+    /* line-height: 150%; */
+    font-size: 0.75rem;
+}
 
 
 
@@ -578,8 +1047,6 @@ body{
     .main-container-img {
         top: 0;
     }
-    
-    
 
 }
 
