--- a/styles.css
+++ b/styles.css
@@ -987,11 +987,12 @@ footer{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-top: 1px;
 }
 .footer-space{
     height: 24px;
     border-bottom: 1px solid gray;
-    margin-bottom: 24px;
+    margin-bottom: 26px;
 }
 
 .footer-description{
@@ -1007,10 +1008,20 @@ footer{
     font-size: 0.75rem;
 }
 
+.footer-links-elm{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    margin-top: 14px;
+}
 
-
-
-
+.footer-links-elm a{
+    font-weight: 700;
+    position: relative;
+    font-size: 1rem;
+    line-height: 150%;
+    color: #0B0B0B; 
+}
 
 
 
